--- a/blog_travel/blogs/templates/blogs/post_form.html
+++ b/blog_travel/blogs/templates/blogs/post_form.html
@@ -6,24 +6,23 @@
 {% endblock %}
 
 {% block main_container %}
-    <a href="{% url 'blogs:index' %}">Main</a>
-    {% if user.is_authenticated %}
-        <a href="{% url 'register:logout' %}">Выйти ({{ user.username }})</a>
-        <div>
-            <div class="post-create-form">
-                <form method="post">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    {#            {% for f_name, field in form.fields.items %}#}
-                    {#                {{ f_name }} {{ field }}#}
-                    {#            {% endfor %}#}
-                    <input type="submit" value="save">
-                </form>
+    <div class="container-md">
+        <a href="{% url 'blogs:index' %}">На главную</a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'register:logout' %}">Выйти ({{ user.username }})</a>
+            <div>
+                <div class="post-create-form">
+                    <form method="post">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <input type="submit" value="save">
+                    </form>
+                </div>
             </div>
-        </div>
-    {% else %}
-        <a href="{% url 'register:login' %}">Войти</a>
-    {% endif %}
+            </div>
+        {% else %}
+            <a href="{% url 'register:login' %}">Войти</a>
+        {% endif %}
 
 
 {% endblock %}
