--- a/blog_travel/register/templates/register/bloguser_form.html
+++ b/blog_travel/register/templates/register/bloguser_form.html
@@ -1,12 +1,62 @@
 {% extends "base.html" %}
 
-{% block page_title %}Create an Account{% endblock %}
+{% block page_title %}Регистрация аккаунта{% endblock %}
 {#{% load crispy_forms_tags %}#}
 
 {% block main_container %}
-    <form method="POST" class="form-group">
-	{% csrf_token %}
-	{{ form }}
-	<button type="submit" class="btn btn-success">Register</button>
-    </form>
+{#    <div class="col d-flex justify-content-center">#}
+{#    <div class="card" style="width: 18rem;">#}
+{#        <div class="card-body">#}
+{#            <h5 class="card-title text-center">Регистрация</h5>#}
+{#            <div class="container py-2">#}
+                {#        <div class="row">#}
+                {#            <div class="col-12">#}
+                {#                <h2 class="my-5">Регистрация</h2>#}
+                <form method="POST" class="form-group">
+                    {% csrf_token %}
+{#                    <div class="form-group">#}
+{#                        {{ form.username.label_tag }}#}
+{#                        <input type="text"#}
+{#                               class="form-control {% if form.username.errors %}is-invalid{% endif %}"#}
+{#                               id="id_username"#}
+{#                               name="username" value='{{ form.username.value|default:"" }}'>#}
+{#                        <small class="text-muted">{{ form.username.help_text }}</small>#}
+{#                        {% if form.username.errors %}#}
+{#                            <div class="invalid-feedback">{{ form.username.errors }}</div>#}
+{#                        {% endif %}#}
+{#                    </div>#}
+{##}
+{#                    <div class="form-group">#}
+{#                        {{ form.password1.label_tag }}#}
+{#                        <input type="password"#}
+{#                               class="form-control {% if form.password1.errors %}is-invalid{% endif %}"#}
+{#                               id="id_password1" name="password1" value='{{ form.password1.value|default:"" }}'>#}
+{#                        <small class="text-muted">{{ form.password1.help_text }}</small>#}
+{#                        {% if form.password1.errors %}#}
+{#                            <div class="invalid-feedback">{{ form.password1.errors }}</div>#}
+{#                        {% endif %}#}
+{#                    </div>#}
+{##}
+{#                    <div class="form-group">#}
+{#                        {{ form.password2.label_tag }}#}
+{#                        <input type="password"#}
+{#                               class="form-control {% if form.password2.errors %}is-invalid{% endif %}"#}
+{#                               id="id_password2" name="password2" value='{{ form.password2.value|default:"" }}'>#}
+{#                        <small class="text-muted">{{ form.password2.help_text }}</small>#}
+{#                        {% if form.password2.errors %}#}
+{#                            <div class="invalid-feedback">{{ form.password2.errors }}</div>#}
+{#                        {% endif %}#}
+{#                    </div>#}
+{#                    <p></p>#}
+{#                    <button type="submit" class="btn btn-secondary">Sign up</button>#}
+{#                </form>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+
+
+                        {{ form.as_p }}
+                        <button type="submit" class="btn btn-secondary">Зарегистрироваться</button>
+                    </form>
+{#                </div>#}
 {% endblock %}
