--- a/blog_travel/register/templates/registration/login.html
+++ b/blog_travel/register/templates/registration/login.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block page_title %}Create an Account{% endblock %}
+
+{% block main_container %}
 <div class="login-form">
     <form method="post">
         {% csrf_token %}
@@ -12,5 +10,4 @@
         <input type="submit" value="login">
     </form>
 </div>
-</body>
-</html>
+{% endblock %}
