--- a/blog_travel/register/templates/profile/profile.html
+++ b/blog_travel/register/templates/profile/profile.html
@@ -8,10 +8,20 @@
 
 {% block main_container %}
     {% load static %}
-
-    <div class="row my-3 p-3">
-        <h1>This is the profile page for {{user.username}}</h1>
+<div class="container-fluid mt-5">
+  <div class="row">
+    <div class="card col-lg-6 offset-lg-3 mb-3">
+      <div class="row">
+          <p><a href="{% url 'register:edit_profile' %}">Edit your profile</a></p>
+        <div class="card-body col-9">
+          <h2 class="card-title my-3">{{ user.username }}</h2>
+          <p>Birthdate: {{ user.profile.d_birth }}</p>
+          <p class="card-text">{{ user.profile.bio }}</p>
+        </div>
+      </div>
     </div>
+  </div>
+</div>
 
 
 {% endblock %}
