--- a/blog_travel/blogs/templates/blogs/index.html
+++ b/blog_travel/blogs/templates/blogs/index.html
@@ -9,14 +9,14 @@
 {% block main_container %}
     {% load static %}
 
-    <link rel="stylesheet" type="text/css" href="{% static 'blog_travel/style.blog_travel' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'blog_travel/style.css' %}">
     <div class="posts_list">
         <div class="container py-2">
             {% for post in post_list %}
                 <div class="p-3 mb-4 bg-light rounded-3">
                     <div class="container-md py-2" style="padding-top: 5px; margin-left: 20px;">
                         <ul class="list-inline">
-                            <li class="list-inline-item">{{ post.author.username }}</li>
+                            <a href="{% url 'register:profile' post.author.username %}" class="list-inline-item">{{ post.author.username }}</a>
                             <li class="list-inline-item">{{ post.pub_date }}</li>
                         </ul>
 
