--- a/blog_travel/register/templates/profile/profile.html
+++ b/blog_travel/register/templates/profile/profile.html
@@ -2,7 +2,7 @@
 
 
 {% block page_title %}
-
+Профиль
 {% endblock %}
 
 
@@ -12,10 +12,11 @@
   <div class="row">
     <div class="card col-lg-6 offset-lg-3 mb-3">
       <div class="row">
-          <p><a href="{% url 'register:edit_profile' %}">Edit your profile</a></p>
+
         <div class="card-body col-9">
+            <h5><a href="{% url 'register:edit_profile' %}">Edit your profile</a></h5>
           <h2 class="card-title my-3">{{ user.username }}</h2>
-          <p>Birthdate: {{ user.profile.d_birth }}</p>
+{#          <p>Birthdate: {{ user.profile.d_birth }}</p>#}
           <p class="card-text">{{ user.profile.bio }}</p>
         </div>
       </div>
