add almost tags
add almost tags to form

--- a/blog_travel/blogs/templates/blogs/post_detail.html
+++ b/blog_travel/blogs/templates/blogs/post_detail.html
@@ -21,7 +21,10 @@
                 <p class="display-6 fw-bold">{{ post.title }}</p>
 
                 <p class="lh-base">{{ post.body }}</p>
-
+{##}
+                {% for tag in post.tags.all %}
+                    <p class="lh-base">{{ tag }}</p>
+                {% endfor %}
 
             </div>
         </div>
