fix tags, add comments
fix tags
add comment section

--- a/blog_travel/blogs/templates/base.html
+++ b/blog_travel/blogs/templates/base.html
@@ -18,9 +18,11 @@
             <a class="navbar-brand" style="color:
                             black" href="{% url 'blogs:index' %}">BlogTravel</a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 link-dark">Inventory</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">Европа</a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">Азия</a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">Африка</a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">Америка</a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">Иные континенты</a></li>
             </ul>
 
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
