--- a/blog_travel/blogs/templates/blogs/post_detail.html
+++ b/blog_travel/blogs/templates/blogs/post_detail.html
@@ -14,13 +14,13 @@
     <div class="p-3 mb-4 bg-light rounded-3">
         <div class="container-md py-2" style="padding-top: 5px; margin-left: 20px;">
             <ul class="list-inline">
-                <li class="list-inline-item">{{ post.author.username }}</li>
+                <a href="{% url 'register:profile' post.author.username %}"
+                   class="list-inline-item">{{ post.author.username }}</a>
                 <li class="list-inline-item">{{ post.pub_date }}</li>
             </ul>
 
 
             <p class="display-6 fw-bold">{{ post.title }}</p>
-
             <p class="lh-base">{{ post.body }}</p>
             {##} Теги:
             {% for tag in post.tags.all %}
@@ -32,6 +32,21 @@
                     <a class="btn btn-dark" href="{% url 'blogs:post_delete' post.id %}">Delete</a>
                 </div>
             {% endif %}
+
+            <p class="dropdown-divider">
+            <h2>Комментарии</h2>
+
+            {% if not post.comments.all %}
+                <p>Пока еще нет комментариев</p>
+            {% else %}
+                {% for comment in post.comments.all %}
+                    {{ comment.name }} - {{ comment.created }}
+                    <br/>
+                    {{ comment.body }}
+                    <br/><br/>
+                {% endfor %}
+            {% endif %}
+            <p><a class="btn btn-outline-dark" href="{% url 'blogs:comment_create' post.id %}">Добавить комментарий</a></p>
         </div>
     </div>
 
