commit resque db
fixed base, because of broken view

--- a/blog_travel/blogs/templates/base.html
+++ b/blog_travel/blogs/templates/base.html
@@ -32,7 +32,12 @@
             <div class="dropdown text-end">
                 <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1"
                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                         class="bi bi-images" viewBox="0 0 16 16">
+                        <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+                        <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2zM14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1zM2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1h-10z"/>
+                    </svg>
+{#                    <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">#}
                 </a>
                 <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1" style="">
 
@@ -40,7 +45,8 @@
                     {% if user.is_authenticated %}
 
                         <li><a class="dropdown-item" href="{% url 'blogs:post_create' %}">Новый пост</a></li>
-                        <li><a class="dropdown-item" href="{% url 'register:profile' request.user.username %}">Мой профиль</a></li>
+                        <li><a class="dropdown-item" href="{% url 'register:profile' request.user.username %}">Мой
+                            профиль</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
