--- a/blog_travel/blogs/templates/blogs/chosen_tags.html
+++ b/blog_travel/blogs/templates/blogs/chosen_tags.html
@@ -2,8 +2,36 @@
 
 
 {% block page_title %}
-    Удалить пост
+    Теги по теме: {{ tag_category }}
 {% endblock %}
 {% block main_container %}
-    {% load static %}
+    <div class="posts_list">
+        <div class="container py-2">
+            <h1>Посты по тегу: {{ tag_category }}</h1>
+            {% load static %}
+            {% for tag in tags %}
+                <div class="p-3 mb-4 bg-light rounded-3">
+                    <div class="container-md py-2" style="padding-top: 5px; margin-left: 20px;">
+                        <ul class="list-inline">
+                            <a href="{% url 'register:profile' post.author.username %}"
+                               class="list-inline-item">{{ post.author.username }}</a>
+                            <li class="list-inline-item">{{ post.pub_date }}</li>
+                        </ul>
+
+                        <a href="{% url 'blogs:post_detail' post.pk %}" class="display-6 fw-bold" style="color:
+                            black; text-decoration: none">
+                            {{ post.title }}
+                        </a>
+                        <p></p>
+
+                        <p class="lh-base">{{ post.body | truncatewords:50 }}</p>
+
+                        <a class="btn btn-outline-secondary" href="{% url 'blogs:post_detail' post.pk %}"
+                           role="button">Читать
+                            далее</a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
