--- a/blog_travel/blogs/templates/blogs/chosen_tags.html
+++ b/blog_travel/blogs/templates/blogs/chosen_tags.html
@@ -2,14 +2,15 @@
 
 
 {% block page_title %}
-    Теги по теме: {{ tag_category }}
+    Теги по теме: {{ tag }}
 {% endblock %}
 {% block main_container %}
     <div class="posts_list">
         <div class="container py-2">
-            <h1>Посты по тегу: {{ tag_category }}</h1>
+            <h1>Посты по тегу: {{ tag }}</h1>
             {% load static %}
-            {% for tag in tags %}
+            {% for post in posts %}
+
                 <div class="p-3 mb-4 bg-light rounded-3">
                     <div class="container-md py-2" style="padding-top: 5px; margin-left: 20px;">
                         <ul class="list-inline">
